# learning_fastAPI

./: .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  ENVIRONMENT_SETUP.md  LINTING_CONFIG.md  Makefile  PRE_COMMIT_SETUP.md  PROJECT_CONTEXT.md  README.md  SHORTCUTS.md  alembic.ini  app.db  env.example  fastapi_dependency_injection_insights.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: d0915120da8c_create_users_table.py
app/: api_router.py  main.py  utils.py
app/core/: config.py
app/crud/: base.py
app/db/: base.py  database.py  init_db.py
app/domains/items/models/: __init__.py
app/domains/users/crud/: __init__.py
app/domains/users/endpoints/: __init__.py
app/domains/users/models/: __init__.py
app/domains/users/schemas/: __init__.py
app/domains/users/service/: __init__.py
tests/: test_main.py
